--- a/public/index.css
+++ b/public/index.css
@@ -4,7 +4,7 @@ main{
 main .topPic {
   min-height: 300px;
   border-radius: 32px;
-  background-image: url(https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fthumbnails%2F010%2F925%2F820%2Fsmall%2Fcolorful-welcome-design-template-free-vector.jpg&tbnid=poDAITmtyIOWjM&vet=12ahUKEwii9YW9qfOCAxV1nCcCHfLkAy4QMygAegQIARBH..i&imgrefurl=https%3A%2F%2Fwww.vecteezy.com%2Ffree-vector%2Fwelcome&docid=v-k5n4e_C90LFM&w=408&h=200&q=welcome&ved=2ahUKEwii9YW9qfOCAxV1nCcCHfLkAy4QMygAegQIARBH);
+  background-image: url(../pexels-maria-tyutina-954599.jpg);
   font-family: "Pattaya", sans-serif;
   box-shadow: 0px 10px 22px 0px #000000;
   background-position: center;
